CanvasCapture should not generate a frame per each canvas draw command https://bugs.webkit.org/show_bug.cgi?id=169498

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-14
Reviewed by Simon Fraser & Eric Carlson.

Source/WebCore:

Test: fast/mediastream/captureStream/canvas2d-heavy-drawing.html

Making Canvas capture be asynchronous.
This ensures that one frame will be created for a set of synchronous draw commands.
In the future, we should find a better approach, like aligning with requestAnimationFrame.
Adding internals observer API for media stream tracks.

* Modules/mediastream/CanvasCaptureMediaStreamTrack.cpp:
(WebCore::CanvasCaptureMediaStreamTrack::Source::Source):
(WebCore::CanvasCaptureMediaStreamTrack::Source::canvasChanged):
* Modules/mediastream/CanvasCaptureMediaStreamTrack.h:
* Modules/mediastream/MediaStreamTrack.idl:
* platform/mediastream/RealtimeMediaSource.h:
* testing/Internals.cpp:
(WebCore::Internals::~Internals):
(WebCore::Internals::observeMediaStreamTrack):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/mediastream/captureStream/canvas2d-heavy-drawing-expected.txt: Added.
* fast/mediastream/captureStream/canvas2d-heavy-drawing.html: Added.

Canonical link: https://commits.webkit.org/186647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213972 268f45cc-cd09-0410-ab3c-d52691b4dbfc