Source/WebCore/testing/Internals.h
@@ -30,6 +30,7 @@
 #include "ContextDestructionObserver.h"
 #include "ExceptionOr.h"
 #include "PageConsoleClient.h"
+#include "RealtimeMediaSource.h"
 #include <runtime/Float32Array.h>
 
 #if ENABLE(MEDIA_SESSION)
@@ -57,6 +58,7 @@ class InspectorStubFrontend;
 class InternalSettings;
 class MallocStatistics;
 class MediaSession;
+class MediaStreamTrack;
 class MemoryInfo;
 class MockCDMFactory;
 class MockContentFilterSettings;
@@ -75,7 +77,7 @@ class TypeConversions;
 class WebGLRenderingContextBase;
 class XMLHttpRequest;
 
-class Internals final : public RefCounted<Internals>, private ContextDestructionObserver {
+class Internals final : public RefCounted<Internals>,  private ContextDestructionObserver, private RealtimeMediaSource::Observer {
 public:
     static Ref<Internals> create(Document&);
     virtual ~Internals();
@@ -544,6 +546,10 @@ public:
     void simulateWebGLContextChanged(WebGLRenderingContextBase&);
 #endif
 
+    unsigned long trackAudioSampleCount() const { return m_trackAudioSampleCount; }
+    unsigned long trackVideoSampleCount() const { return m_trackVideoSampleCount; }
+    void observeMediaStreamTrack(MediaStreamTrack&);
+
 private:
     explicit Internals(Document&);
     Document* contextDocument() const;
@@ -551,7 +557,15 @@ private:
 
     ExceptionOr<RenderedDocumentMarker*> markerAt(Node&, const String& markerType, unsigned index);
 
+    // RealtimeMediaSource::Observer API
+    void videoSampleAvailable(MediaSample&) final { m_trackVideoSampleCount++; }
+    void audioSamplesAvailable(const MediaTime&, const PlatformAudioData&, const AudioStreamDescription&, size_t) final { m_trackAudioSampleCount++; }
+
     std::unique_ptr<InspectorStubFrontend> m_inspectorFrontend;
+
+    unsigned long m_trackVideoSampleCount { 0 };
+    unsigned long m_trackAudioSampleCount { 0 };
+    RefPtr<MediaStreamTrack> m_track;
 };
 
 } // namespace WebCore
